# database/User_DB/User_Schema.go
@@ -11,6 +11,7 @@ type UserInfo struct {
 	Email        string    `json:"email"`
 	Password     string    `json:"password"`
 	Ssotoken     string    `json:"Ssotoken"`
+	Fcmtoken     string    `json:"Fcmtoken"`
 	Home_id      string    `json:"Home_id"`
 	Registertime time.Time `json:"Registertime" example:"2025-03-23T15:04:05Z"`
 	Birthdaytime time.Time `json:"Birthdaytime" example:"2025-03-23T15:04:05Z"`
